--- a/public/stylesheets/coursesJEE.css
+++ b/public/stylesheets/coursesJEE.css
@@ -16,7 +16,7 @@
     padding: 5%;  
 }
 .headh1h2{
-   padding: .5%;
+   padding: 0.5% 0;
 }
 
 .coursesneet h1{
@@ -291,16 +291,14 @@
 }
 .bg1 {
 
-    background: url(../images/courses/hexbox1.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/img1.png) center/contain;
+    
 }
 .bg2 {
-    background: url(../images/courses/hexbox2.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/img2.png) center/contain;
 }
 .bg3 {
-    background: url(../images/courses/hexbox1.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/img1.png) center/contain;
 }
 .hex1 {
     background-repeat: no-repeat;
@@ -313,6 +311,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+}
+
+.hex1 img {
+    width: 29%;
 }
 .hex2 {
     flex-direction: row-reverse;
@@ -327,9 +329,9 @@
 }
 .hexBox {
     width: 55%;
-    background-color: rgba(255, 255, 255, 0.63);
+    /* background-color: rgba(255, 255, 255, 0.63); */
     height: 70%;
-    border-radius: 40px;
+    /* border-radius: 40px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -355,12 +357,13 @@
 
 }
 .neet1btn, .neet2btn, .neet3btn, .neet4btn {
-    padding:  .5rem 1rem;
+    padding:  0.5rem 2rem;
     border-radius: 20px;
     background-color: #526DF0;
     color: white;
     border: none;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
 }
 .methodology1 , .methodology2, .methodology3{
    background-color: white;
@@ -380,6 +383,12 @@
     line-height: 1.8rem;
     margin-left: auto;
     margin-right: auto;
+    list-style: none;
+}
+.tick {
+    width: 16px;
+    height: 14px;
+    margin-right: .5rem;
 }
 .bgmeth , .bgmeth2 , .bgmeth3 {
     display: none;
@@ -428,10 +437,196 @@
     margin: 2rem 0rem;
 }
 
+/* Button a */
+.button {
+	position: absolute;
+	display: inline-block;
+	padding: 12px 30px;
+	color: rgba(255, 255, 255, 1);
+	letter-spacing: 2px;
+	background: rgb(233, 129, 44);
+	transition: 0.5s;
+	border: none;
+	font-size: 16px;
+	cursor: pointer;
+	text-decoration: none;
+	z-index: 10;
+}
+
+.button:hover {
+	color: rgb(255, 255, 255);
+	font-weight: bolder;
+}
+
+.button:focus {
+	border: none;
+	outline: none;
+}
+
+.button span {
+	display: block;
+	position: absolute;
+	background: rgb(255,255,255);
+}
+
+.button span:nth-child(1) {
+	left: 0;
+	z-index: 31;
+	bottom: 0%;
+	width: 3px;
+	height: 100%;
+	transform: scaley(0);
+	transform-origin: top;
+	transition: transform 0.5s;
+}
+
+.button:hover span:nth-child(1) {
+	transform: scaley(1);
+	transform-origin: bottom;
+	transition: transform 0.5s;
+}
+
+.button span:nth-child(2) {
+	left: 0;
+	z-index: 31;
+	bottom: 0%;
+	width: 100%;
+	height: 3px;
+	transform: scalex(0);
+	transform-origin: right;
+	transition: transform 0.5s;
+}
+
+.button:hover span:nth-child(2) {
+	transform: scalex(1);
+	transform-origin: left;
+	transition: transform 0.5s;
+}
+
+.button span:nth-child(3) {
+	right: 0;
+	bottom: 0%;
+	width: 3px;
+	height: 100%;
+	transform: scaley(0);
+	transform-origin: top;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button:hover span:nth-child(3) {
+	transform: scaley(1);
+	transform-origin: bottom;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button span:nth-child(4) {
+	left: 0;
+	z-index: 31;
+	top: 0%;
+	width: 100%;
+	height: 3px;
+	transform: scalex(0);
+	transform-origin: right;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button:hover span:nth-child(4) {
+	transform: scalex(1);
+	transform-origin: left;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.feed-container div:hover img {
+	transform: scale(1.05);
+}
+
+.feed-container div:hover::after {
+	background-color: rgba(0, 0, 0, 0.6);
+	backdrop-filter: blur(1px);
+}
+
 
 
 .exit {
     position: absolute;
     right: 2%;
     top: 3%;
+}
+@media (max-width:1400px) {
+    .hex1 {
+        width: 90%;
+    }
+}
+
+@media (max-width:1250px) {
+    .hex1 {
+        height: 385px;
+    }
+    .hexBox {
+        height: 65%;
+    }
+    .hexContent {
+        font-size: 16px;
+        line-height: 1.8rem;
+    }
+    .hexTitle {
+        font-size: 1.3rem;
+    }
+}
+@media (max-width:1100px) {
+
+    .bg1 {
+
+        background: url(../images/courses/vec1.png) center/contain;
+        background-size: 100% 90%;
+        background-repeat: no-repeat;
+    }
+    .bg2 {
+        background: url(../images/courses/Vector3.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .bg3 {
+        background: url(../images/courses/Vector5.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .hexBox {
+        height: 70%;
+        /* width: 50%; */
+    }
+    .hex1 img {
+        width: 35%;
+        height: 80%;
+        transform: scale(.9);
+    }
+}
+
+@media (max-width:950px) {
+    .hexTitle {
+        font-size: 1.1rem;
+    }
+    .hexBox {
+        width: 52%;
+    }
+    .hexContent {
+        
+        line-height: 1.7rem;
+    }
+    .bg1 {
+        background-size: 100% 80%;
+    }
+    .bg2 {
+        background-size: 100% 80%;
+    }
+    .bg3 {
+        background-size: 100% 80%;
+    }
+    .hex1 {
+        height: 350px;
+    }
 }
