--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -4,33 +4,151 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/coursesJEE.css" />
+    <link rel="stylesheet" href="stylesheets/coursesNEET.css" />
     <title>CoursesJEE</title>
   </head>
   <body>
+    <section class="bgmeth">
+      <div class="methodology1">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <h1>Course Methodology</h1>
+        <ul>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span> Full day course from Monday to Saturday</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classes with proven faculties</li>
+          <li>
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Daily test, Unit test, Unit Cumulative Test, Revision test, Full
+            length NEET Mock tests
+          </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Attendance, Mark status update SMS to parents</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Frequent Parent-teacher Meeting</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Exam tips and tricks, Motivational Sessions</li>
+        </ul>
+      </div>
+    </section>
+    <section class="bgmeth2">
+      <div class="methodology2">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <h1>Course Methodology</h1>
+        <ul>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
+          <li>
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
+          </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules</li>
+      
+        </ul>
+      </div>
+    </section>
+    <section class="bgmeth3">
+      <div class="methodology3">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <h1>Course Methodology</h1>
+        <ul>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
+          <li>
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
+          </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules</li>
+        
+        </ul>
+      </div>
+    </section>
+
     <%- include('./layout/header') %>
+
     <!--courses Neet-->
     <section class="coursesneet">
-      
+      <!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>IIT-JEE</b></h2>
-        <a href="/contactus"><button class="enroll1">Enroll Now!</button></a>
+        <a class="button" id="button" href="" target="">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					Enroll Now
+				</a>
       </span>
 
-      <a href="home" style="text-decoration: none; color: #000"
-        ><svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="leftarrow"
-          viewBox="0 0 20 20"
-          fill="currentColor"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
-            clip-rule="evenodd"
-          /></svg></a>
+     
     </section>
+   
     <section class="hexMain">
       <div class="hex1 bg1">
         <img src="../images/courses/heximg1.png" alt="" />
@@ -87,7 +205,9 @@
         </div>
       </div>
     </section>
+
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
+
     <%- include('./layout/footer') %>
     <script src="../javascripts/courses.js"></script>
   </body>
