--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -137,21 +137,16 @@
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>NEET</b></h2>
-        <a href="/contactus"><button class="enroll1">Enroll Now!</button></a>
+        <a class="button" id="button" href="" target="">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					Enroll Now
+				</a>
       </span>
 
-      <a href="home" style="text-decoration: none; color: #000"
-        ><svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="leftarrow"
-          viewBox="0 0 20 20"
-          fill="currentColor"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
-            clip-rule="evenodd"
-          /></svg></a>
+     
     </section>
    
     <section class="hexMain">
