--- a/public/stylesheets/coursesIIT&Medical.css
+++ b/public/stylesheets/coursesIIT&Medical.css
@@ -1,26 +1,24 @@
 /* image*/
-.coursesneet{
+.coursesneet {
     width: 100%;
     height: 90vh;
-    background: url('../images/courses/iit &medical.jpg' ) center/cover;
+    background: url('../images/courses/neet.jpg') center/cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 
     display: flex;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 }
 /*Heading*/
 .h1andh2{
     padding: 5%;  
 }
 .headh1h2{
-   padding: 2%;
+   padding: 0.5% 0;
 }
-.coursesneet{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-}
+
 .coursesneet h1{
     color:#568036 ; 
     font-size: 45px; 
@@ -39,6 +37,7 @@
     left: 0rem;
     position: fixed;
 }
+
 /*OVERVIEW*/
 
 .overview{
@@ -84,15 +83,6 @@
     align-items: center;
 }
 
-.module div {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-}
-
 .module h2{
     position: relative;
     padding: 2rem 4rem 2rem 4rem;
@@ -136,4 +126,507 @@
     align-items: center;
     height: 35vh;
 
+}
+
+.sec1 {
+    /* background: url(../images/courses/bg1.png) center/cover; */
+    background-size: 120%;
+    background-repeat: no-repeat;
+    
+}
+.neetSection {
+    position: relative;
+    
+    background-color: #60efff4b;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem ;
+    margin-bottom: 4rem;
+    /* box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2); */
+    border-radius: 20px;
+    padding: 2rem 0rem 0rem 0rem;
+    
+}
+
+
+.neetSection h1 {
+    /* position: absolute; */
+    text-align: center;
+    /* margin: 2rem; */
+    padding: .5rem 0rem;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.774);
+}
+.heading2 {
+    text-align: center;
+    margin: 1rem;
+}
+.heading3 {
+    text-align: center;
+    /* margin-top: 1rem; */
+}
+.neetSection p {
+    font-size: 18px;
+    text-align: justify;
+    font-weight: 500;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.8rem;
+    font-family: sans-serif;
+    padding: 2rem;
+}
+
+.neetSection ul {
+    text-align: justify;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top: 4rem ; */
+    /* margin-bottom: 3rem; */
+    padding: 2rem;
+    font-size: 16px;
+    font-weight: 500;
+    /* letter-spacing: 2px; */
+    font-family: sans-serif;
+    line-height: 1.5rem;
+}
+.box1 {
+    flex-direction: row;
+}
+.box2 {
+    flex-direction: row-reverse;
+}
+.box3 {
+    flex-direction: row;
+}
+
+.neetBox1 {
+    background-color: blanchedalmond;
+    width: 90%;
+    position: relative;
+    display: flex;
+    /* flex-direction: row; */
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
+    -webkit-clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
+  clip-path: polygon(10% 5%, 90% 5%, 100% 50%, 90% 95%, 10% 95%, 0% 50%);
+  /* border-radius: 20px; */
+    /* border-radius: 300px 0px 300px 0px; */
+}
+
+/* .neetBox1::after {
+    content: "";
+    position:absolute;
+    margin:-150px;
+    width:300px;
+    height:300px;
+    transform:rotate(45deg);
+    
+} */
+.hexa {
+    width: 40%;
+    background-color: rgb(253, 196, 196);
+}
+.neetContent1 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent2 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent1 h1 {
+    text-align: center;
+}
+.neetContent2 h1 {
+    text-align: center;
+}
+.neetContent1 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    /* margin-left: auto; */
+    margin-right: auto;
+}
+.neetContent2 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    margin-left: auto;
+    /* margin-right: auto; */
+}
+.neetContent1 ul {
+    text-align: justify;
+    width: 80%;
+    /* margin-left: auto; */
+    margin-right: auto;
+    line-height: 1.5rem;
+}
+.neetContent2 ul {
+    text-align: justify;
+    width: 80%;
+    margin-left: auto;
+    /* margin-right: auto; */
+    line-height: 1.5rem;
+}
+.neetContent1 h3 {
+    margin: 1.5rem;
+}
+.neetContent2 h3 {
+    margin: 1.5rem;
+}
+.bg1 {
+
+    background: url(../images/courses/img1.png) center/contain;
+    
+}
+.bg2 {
+    background: url(../images/courses/img2.png) center/contain;
+}
+.bg3 {
+    background: url(../images/courses/img1.png) center/contain;
+}
+.hex1 {
+    background-repeat: no-repeat;
+    width: 80%;
+    position: relative;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.hex1 img {
+    width: 29%;
+}
+.hex2 {
+    flex-direction: row-reverse;
+}
+.hexMain {
+    /* background-color: blue; */
+    width: 100%;
+    /*  */
+}
+.bg1:nth-child(1) {
+    margin-top: 4rem;
+}
+.hexBox {
+    width: 55%;
+    /* background-color: rgba(255, 255, 255, 0.63); */
+    height: 70%;
+    /* border-radius: 40px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 4rem;
+    
+}
+.hexBox2 {
+    margin-right: 0rem !important;
+    margin-left: 4rem !important;
+}
+.hexTitle {
+    text-align: center;
+    /* padding: 1rem; */
+}
+.hexContent {
+    width: 75%;
+    /* padding: 1rem; */
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2rem;
+    font-size: 17px;
+
+}
+.neet1btn, .neet2btn, .neet3btn, .neet4btn {
+    padding:  0.5rem 2rem;
+    border-radius: 20px;
+    background-color: #526DF0;
+    color: white;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
+}
+.methodology1 , .methodology2, .methodology3{
+   background-color: white;
+   width: 50%;
+   padding: 3rem;
+   border-radius: 20px;
+   position: relative;
+
+
+}
+.methodology1 h1 , .methodology2 h1 , .methodology3 h1 {
+    text-align: center;
+    padding-bottom: 2rem;
+    
+}
+.methodology1 ul , .methodology2 ul ,.methodology3 ul {
+    line-height: 1.8rem;
+    margin-left: auto;
+    margin-right: auto;
+    list-style: none;
+}
+.tick {
+    width: 16px;
+    height: 14px;
+    margin-right: .5rem;
+}
+.bgmeth , .bgmeth2 , .bgmeth3 {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    /* background-color: rgba(0, 0, 0, 0.753); */
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}
+.enroll1:hover {
+    background-color: #2c2e2a;
+    color: rgb(255, 255, 255);
+}
+.enroll:hover {
+    background-color: #2c2e2a;
+    color: rgb(255, 255, 255);
+}    
+.enroll1 {
+    padding: .8rem 1.5rem;
+    position: relative;
+    font-size: 18px;
+    font-weight: 600;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    border-radius: 10px;
+    background-color: #F49A08;
+    color: rgb(0, 0, 0);
+    box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+    border: none;
+    margin: 1rem 0rem;
+}
+.enroll {
+    padding: 1rem 1.5rem;
+    position: relative;
+    font-size: 18px;
+    font-weight: 600;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    background-color: #F47D03;
+    box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+    border: none;
+    margin: 2rem 0rem;
+}
+
+/* Button a */
+.button {
+	position: absolute;
+	display: inline-block;
+	padding: 12px 30px;
+	color: rgba(255, 255, 255, 1);
+	letter-spacing: 2px;
+	background: rgb(233, 129, 44);
+	transition: 0.5s;
+	border: none;
+	font-size: 16px;
+	cursor: pointer;
+	text-decoration: none;
+	z-index: 10;
+}
+
+.button:hover {
+	color: rgb(255, 255, 255);
+	font-weight: bolder;
+}
+
+.button:focus {
+	border: none;
+	outline: none;
+}
+
+.button span {
+	display: block;
+	position: absolute;
+	background: rgb(255,255,255);
+}
+
+.button span:nth-child(1) {
+	left: 0;
+	z-index: 31;
+	bottom: 0%;
+	width: 3px;
+	height: 100%;
+	transform: scaley(0);
+	transform-origin: top;
+	transition: transform 0.5s;
+}
+
+.button:hover span:nth-child(1) {
+	transform: scaley(1);
+	transform-origin: bottom;
+	transition: transform 0.5s;
+}
+
+.button span:nth-child(2) {
+	left: 0;
+	z-index: 31;
+	bottom: 0%;
+	width: 100%;
+	height: 3px;
+	transform: scalex(0);
+	transform-origin: right;
+	transition: transform 0.5s;
+}
+
+.button:hover span:nth-child(2) {
+	transform: scalex(1);
+	transform-origin: left;
+	transition: transform 0.5s;
+}
+
+.button span:nth-child(3) {
+	right: 0;
+	bottom: 0%;
+	width: 3px;
+	height: 100%;
+	transform: scaley(0);
+	transform-origin: top;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button:hover span:nth-child(3) {
+	transform: scaley(1);
+	transform-origin: bottom;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button span:nth-child(4) {
+	left: 0;
+	z-index: 31;
+	top: 0%;
+	width: 100%;
+	height: 3px;
+	transform: scalex(0);
+	transform-origin: right;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.button:hover span:nth-child(4) {
+	transform: scalex(1);
+	transform-origin: left;
+	transition: transform 0.5s;
+	transition-delay: 0.5s;
+}
+
+.feed-container div:hover img {
+	transform: scale(1.05);
+}
+
+.feed-container div:hover::after {
+	background-color: rgba(0, 0, 0, 0.6);
+	backdrop-filter: blur(1px);
+}
+
+
+
+.exit {
+    position: absolute;
+    right: 2%;
+    top: 3%;
+}
+@media (max-width:1400px) {
+    .hex1 {
+        width: 90%;
+    }
+}
+
+@media (max-width:1250px) {
+    .hex1 {
+        height: 385px;
+    }
+    .hexBox {
+        height: 65%;
+    }
+    .hexContent {
+        font-size: 16px;
+        line-height: 1.8rem;
+    }
+    .hexTitle {
+        font-size: 1.3rem;
+    }
+}
+@media (max-width:1100px) {
+
+    .bg1 {
+
+        background: url(../images/courses/vec1.png) center/contain;
+        background-size: 100% 90%;
+        background-repeat: no-repeat;
+    }
+    .bg2 {
+        background: url(../images/courses/Vector3.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .bg3 {
+        background: url(../images/courses/Vector5.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .hexBox {
+        height: 70%;
+        /* width: 50%; */
+    }
+    .hex1 img {
+        width: 35%;
+        height: 80%;
+        transform: scale(.9);
+    }
+}
+
+@media (max-width:950px) {
+    .hexTitle {
+        font-size: 1.1rem;
+    }
+    .hexBox {
+        width: 52%;
+    }
+    .hexContent {
+        
+        line-height: 1.7rem;
+    }
+    .bg1 {
+        background-size: 100% 80%;
+    }
+    .bg2 {
+        background-size: 100% 80%;
+    }
+    .bg3 {
+        background-size: 100% 80%;
+    }
+    .hex1 {
+        height: 350px;
+    }
 }
