--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -17,7 +17,7 @@
         <span class="stream1">
           <!-- <label class="mr-sm-2" for="inlineFormCustomSelect">Preference</label> -->
           <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-            <option selected>Stream</option>
+            <option selected class="selectOption">Stream</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
@@ -25,7 +25,7 @@
       </span>
       <span class="stream2">
         <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" >
-          <option selected >Subject</option>
+          <option selected class="selectOption">Subject</option>
           <option value="1">Physics</option>
           <option value="2">Chemistry</option>
           <option value="3">Botany</option>
