--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -5,25 +5,25 @@
 		<img src="images/home/classic-nee-tacademy-logo.png" alt="" />
 	</div>
 	<ul class="navlinks">
-		<li class="">
+		<li class="homeNav">
 			<a class="even" href="/home"><b>Home</b></a>
 		</li>
-		<li class="">
+		<li class="courseNav">
 			<a class="odd" href="/home#courses"><b>Courses</b></a>
 		</li>
-		<li class="">
+		<li class="aboutNav">
 			<a class="even" href="/Aboutus"><b>About Us</b></a>
 		</li>
-		<li class="">
+		<li class="demoNav">
 			<a class="odd" href="/Demovideos"><b>Demo Videos</b></a>
 		</li>
-		<li class="">
+		<li class="successNav">
 			<a class="even" href="/successstories"><b>Success Stories</b></a>
 		</li>
-		<li class="">
+		<li class="resultNav">
 			<a class="odd" href="/results"><b>Results</b></a>
 		</li>
-		<li class="">
+		<li class="contactNav">
 			<a class="even" href="/contactus"><b>Contact Us</b></a>
 		</li>
 	</ul>
