--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -42,11 +42,14 @@ nav {
   justify-content: space-around;
   list-style: none;
   left: 3%;
-  padding-top: .5rem;
+  /* padding-top: .5rem; */
 }
 
 .navlinks {
   list-style: none;
+}
+ul {
+  margin-bottom: 0rem;
 }
 
 .navlinks a {
@@ -58,6 +61,9 @@ nav {
   font-family: "Roboto", sans-serif;
   padding: 1rem;
   border-radius: 20px 0px 20px 0px;
+}
+ ul {
+  padding-left: 0rem;
 }
 /* .navlinks a:hover {
 	background-color: #369AFE;
@@ -103,12 +109,11 @@ nav {
     width: 80%;
   }
 }
-
-@media screen and (max-width: 895px) {
-  body {
-    overflow-x: hidden;
+@media (max-width:1000px) {
+  .hamburger {
+    display: block;
+    cursor: pointer;
   }
-
   .navlinks {
     position: absolute;
     right: 0px;
@@ -122,15 +127,19 @@ nav {
     width: 50%;
     transform: translatex(100%);
     transition: transform 0.5s ease-in;
-    display: none;
+    
   }
+}
+@media screen and (max-width: 895px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  
   .navlinks li {
     opacity: 0;
   }
-  .hamburger {
-    display: block;
-    cursor: pointer;
-  }
+  
 }
 
 .nav-active {
