--- a/public/stylesheets/contactus.css
+++ b/public/stylesheets/contactus.css
@@ -85,7 +85,7 @@
 	justify-content: center;
 	font-size: 1.3rem;
 	padding: 5rem;
-	border: 1px solid #c2c2c2;
+	/* border: 1px solid #c2c2c2; */
 	border-left: none;
 }
 
