--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -308,6 +308,7 @@
     /* margin-left: auto; */
     margin-right: auto;
 }
+
 .neetContent2 p {
     width: 80%;
     line-height: 2rem;
@@ -440,8 +441,8 @@
     position: fixed;
     height: 100vh;
     width: 100vw;
-    /* background-color: rgba(0, 0, 0, 0.753); */
-    backdrop-filter: blur(30px);
+    background-color: rgba(0, 0, 0, 0.553);
+    backdrop-filter: blur(10px);
     z-index: 100;
     justify-content: center;
     align-items: center;
