--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 25px;
+    border-radius:40px;
     font-size: 25px;
     width: 35%;
     height: 10vh;
@@ -59,11 +59,12 @@ p {
 }
 
 select, .stream3 button , .stream4 button  {
-    padding: 1rem 4rem ;
-    border-radius: 25px !important;
+    padding: .8rem 4rem ;
+    border-radius: 40px !important;
     border: 2px solid black;
-    font-size: 20px !important;
+    font-size: 25px !important;
 }
+
 .stream  {
 
      border: 2px solid black;
