--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -87,7 +87,7 @@
 .home {
   position: relative;
   height: 90vh;
-  min-height: 560px;
+  /* min-height: 560px; */
   width: 100%;
   display: flex;
 }
@@ -314,6 +314,7 @@ p {
   font-size: 14px;
   font-weight: 600;
 }
+
 .dateMain {
   font-size: 24px;
   font-weight: 600;
@@ -1370,7 +1371,7 @@ p {
   /* background-color: blanchedalmond; */
   position: relative;
   height: 86vh;
-  min-height: 500px;
+  /* min-height: 500px; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -1511,7 +1512,7 @@ iframe {
   .sec-2 {
     /* background-color: blanchedalmond; */
 
-    height: 75vh;
+    height: fit-content;
   }
   .cardsDiv {
     height: 65vh;
@@ -1531,6 +1532,10 @@ iframe {
 }
 
 @media (max-width: 1100px) {
+  .testimonials_container {
+    width: 100%;
+    height: 30vh !important;
+}
   .blob1 {
     width: 50%;
     height: 74vh;
@@ -1553,20 +1558,20 @@ iframe {
     width: 15rem;
   }
   .cardsDiv {
-    height: 55vh;
-    margin: 0rem 0rem;
+    height: fit-content;
+    margin: 5rem 0rem;
   }
   .mySwiper1 .swiper-slide {
-    width: 14.82rem !important;
+    /* width: 14.82rem !important; */
     height: 10rem !important;
   }
   .mySwiper2 .swiper-slide {
-    width: 14.82rem !important;
-    height: 10rem !important;
+    width: 23.82rem !important;
+    height: 14rem !important;
   }
   .video {
-    height: 16vh;
-    width: 22vw;
+    height: 12vh;
+    width: 30vw;
   }
   .bgTopper {
     /* height: 53vh; */
@@ -1574,14 +1579,14 @@ iframe {
     margin-top: 4rem;
   }
   .mySwiper1 {
-    height: 30vh !important;
+    height: 16vh !important;
     margin-bottom: 3rem;
     margin-top: 3rem;
   }
-  /* .mySwiper2 {
+  .mySwiper2 {
     height: 34vh !important;
-    margin-bottom: 3rem;
-  } */
+    
+  }
   .neet-2020-toppers-a {
     margin-top: 1rem;
   }
@@ -1590,6 +1595,12 @@ iframe {
   }
   .college {
     font-size: 12px;
+  }
+  .arrowprev2 {
+    top: 84.5%;
+  }
+  .arrownext2 {
+    top: 84.5%;
   }
 }
 @media (max-width: 1100px) {
@@ -1716,6 +1727,11 @@ iframe {
     font-size: 12px;
     
   }
+  .sec-2 .div-1 h1 {
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    /* margin-right: 10rem; */
+}
   .swiper-button-prev {
     display: none;
   }
@@ -1744,7 +1760,8 @@ iframe {
   }
   .home {
     
-    min-height: 415px;
+    /* min-height: 415px; */
+
 
     height: 100vh;
   }
@@ -1755,7 +1772,7 @@ iframe {
   .sec-2 {
     display: flex;
     flex-direction: column;
-    min-height: 1000px;
+    /* min-height: 1000px; */
     /* margin-top: 5rem; */
   }
   .news-box {
@@ -1837,10 +1854,10 @@ iframe {
   .home {
     height: 50vh;
     margin-top: 0rem;
-    min-height: 450px;
+    /* min-height: 450px; */
   }
   .sec-2 {
-    min-height: 850px;
+    /* min-height: 850px; */
   }
   .news-box {
     height: 20rem;
@@ -1870,9 +1887,13 @@ iframe {
 }
 @media (max-width: 500px) {
   .home {
-    height: 50vh;
+    /* height: 50vh; */
     margin-top: 0rem;
-    /* min-height: 420px; */
+    height: fit-content;
+    
+  }
+  .sec-2 {
+    height: fit-content;
   }
   .sliderRev {
     height: 35vh;
@@ -1894,16 +1915,16 @@ iframe {
     margin-top: 3rem;
   }
   .mySwiper2 .swiper-slide {
-    width: 18.82rem !important;
-    height: 10rem !important;
+    width: 21.5rem !important;
+    height: 12rem !important;
   }
   .mySwiper1.swiper-slide {
-    width: 18.82rem !important;
+    /* width: 30.82rem !important; */
     height: 10rem !important;
   }
   .mySwiper1 {
     width: 74% !important;
-    /* height: 60vh !important; */
+    
   }
   .mySwiper2 {
     width: 74% !important;
@@ -1912,6 +1933,40 @@ iframe {
   .video {
     height: 16vh;
     width: 65vw;
+  }
+
+
+}
+
+
+@media (max-width:500px) {
+  .home {
+    /* min-height: 550px; */
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  .news-box {
+    height: 22rem;
+    width: 18rem;
+  }
+  .sec-2 {
+    height: fit-content;
+  }
+  .box1,
+  .box2,
+  .box3 {
+    width: 20rem;
+    height: 23rem;
+  }
+  .bottom-drive {
+    width: 100%;
+  }
+  .studentsh1 {
+    
+    font-size: 1.2rem;
+  }
+  .mySwiper2 {
+  width: 84% !important;
   }
 
 
