--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1892,6 +1892,9 @@ iframe {
     height: fit-content;
     
   }
+  .bgTopper {
+    height: 40vh;
+  }
   .sec-2 {
     height: fit-content;
   }
@@ -1924,6 +1927,7 @@ iframe {
   }
   .mySwiper1 {
     width: 74% !important;
+    height: 24vh !important;
     
   }
   .mySwiper2 {
@@ -1934,12 +1938,31 @@ iframe {
     height: 16vh;
     width: 65vw;
   }
+  .testimonials_container {
+    width: 100%;
+    height: 40vh !important;
+}
+
 
 
 }
 
 
-@media (max-width:500px) {
+@media (max-width:400px) {
+  .mySwiper2 {
+    height: 40vh !important;
+  }
+  .mySwiper2 .swiper-slide {
+    width: 18.5rem !important;
+    height: 10rem !important;
+  }
+.testimonials_container {
+  width: 100%;
+  height: 44vh !important;
+  }
+  .bgTopper {
+    height: 46vh;
+  } 
   .home {
     /* min-height: 550px; */
     height: fit-content;
@@ -1968,6 +1991,10 @@ iframe {
   .mySwiper2 {
   width: 84% !important;
   }
+  .mySwiper1 {
+    width: 83% !important;
+    
+}
 
 
 }
