--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -924,6 +924,7 @@ p {
 .testimonials_container {
   width: 100%;
   height: 55vh;
+  margin-bottom: 5rem;
 }
 
 .ytp-chrome-top {
@@ -1331,6 +1332,7 @@ p {
   font-weight: 500;
   margin-bottom: 0.5rem !important;
 }
+
 .score {
   font-size: 18px;
   font-weight: 500;
@@ -1395,10 +1397,12 @@ iframe {
   border-radius: 30px 0 30px 0;
 }
 @media (max-width: 1450px) {
+  
   .blob1 {
     width: 50%;
     height: 80vh;
   }
+
   .blob2 {
     transform: scale(0.8);
     right: 7%;
@@ -1409,6 +1413,7 @@ iframe {
     right: 16%;
     top: 64%;
   }
+
   .box1,
   .box2,
   .box3 {
@@ -1422,17 +1427,15 @@ iframe {
     font-size: 16px;
     font-weight: 700;
   }
-  .mySwiper1 .swiper-slide {
+  /* .mySwiper1 .swiper-slide {
     width: 18.82rem !important;
     height: 14rem !important;
-  }
-  .bgTopper {
-    height: 70vh;
-  }
-  .mySwiper2 .swiper-slide {
+  } */
+
+  /* .mySwiper2 .swiper-slide {
     width: 18.82rem !important;
     height: 14rem !important;
-  }
+  } */
   iframe {
     height: 10rem;
   }
@@ -1453,6 +1456,11 @@ iframe {
 }
 
 @media (max-width: 1250px) {
+  .video {
+    height: 30vh;
+    width: 28vw;
+  }
+
   .box1 h3, .box2 h3, .box3 h3 {
     font-size: 16px;
     
@@ -1521,21 +1529,19 @@ iframe {
   .bottom-drive {
     width: 80%;
   }
-  .mySwiper1 .swiper-slide {
+  /* .mySwiper1 .swiper-slide {
     width: 16.82rem !important;
     height: 12rem !important;
   }
   .mySwiper2 .swiper-slide {
     width: 16.82rem !important;
     height: 12rem !important;
-  }
+  } */
 }
 
 @media (max-width: 1100px) {
-  .testimonials_container {
-    width: 100%;
-    height: 30vh !important;
-}
+
+
   .blob1 {
     width: 50%;
     height: 74vh;
@@ -1561,32 +1567,25 @@ iframe {
     height: fit-content;
     margin: 5rem 0rem;
   }
-  .mySwiper1 .swiper-slide {
-    /* width: 14.82rem !important; */
+  /* .mySwiper1 .swiper-slide {
+    
     height: 10rem !important;
   }
   .mySwiper2 .swiper-slide {
     width: 23.82rem !important;
     height: 14rem !important;
-  }
-  .video {
-    height: 12vh;
-    width: 30vw;
-  }
-  .bgTopper {
-    /* height: 53vh; */
-    height: fit-content;
-    margin-top: 4rem;
-  }
-  .mySwiper1 {
+  } */
+  
+  
+  /* .mySwiper1 {
     height: 16vh !important;
     margin-bottom: 3rem;
     margin-top: 3rem;
-  }
-  .mySwiper2 {
+  } */
+  /* .mySwiper2 {
     height: 34vh !important;
     
-  }
+  } */
   .neet-2020-toppers-a {
     margin-top: 1rem;
   }
@@ -1643,12 +1642,15 @@ iframe {
     align-items: center;
     justify-content: space-between;
   }
-  .testimonials_container {
-    width: 100%;
-    height: 45vh;
-  }
+ 
 }
+
 @media (max-width: 1000px) {
+  .video {
+    height: 34vh;
+    width: 38vw;
+  }
+
   .box1 h3, .box2 h3, .box3 h3 {
     font-size: 14px;
     
@@ -1723,6 +1725,11 @@ iframe {
   }
 }
 @media (max-width: 800px) {
+  .video {
+    height: 30vh;
+    width: 50vw;
+  }
+
   .box1 h3, .box2 h3, .box3 h3 {
     font-size: 12px;
     
@@ -1738,10 +1745,7 @@ iframe {
   .swiper-button-next {
     display: none;
   }
-  .video {
-    height: 18vh;
-    width: 28vw;
-  }
+  
   .statBox {
     width: 80%;
     /* background-color: #2b72e4; */
@@ -1798,10 +1802,8 @@ iframe {
     font-size: 20px;
     
   }
-  .video {
-    height: 18vh;
-    width: 32vw;
-  }
+  
+
   .neet-2020-toppers {
     margin: 2rem 0px;
   }
@@ -1838,9 +1840,16 @@ iframe {
 }
 @media (max-width: 600px) {
   .video {
-    height: 18vh;
-    width: 38vw;
+    height: 26vh;
+    width: 75vw;
   }
+  .mySwiper1 .swiper-slide {
+    width: 28.82rem !important;}
+
+  .neet-2020-toppers-a {
+    font-size: 1.3rem;
+  }
+  
   .Stat h1 {
     font-size: 2.2rem;
   }
@@ -1852,12 +1861,12 @@ iframe {
     height: 55vh;
   }
   .home {
-    height: 50vh;
+    height: fit-content;
     margin-top: 0rem;
     /* min-height: 450px; */
   }
   .sec-2 {
-    /* min-height: 850px; */
+    height: fit-content;
   }
   .news-box {
     height: 20rem;
@@ -1870,6 +1879,11 @@ iframe {
   .neet-2020-toppers-a {
     font-size: 1rem;
   }
+  .div-2-title {
+    
+    margin-top: 2rem;
+    /* border: 1px solid #1E2886; */
+}
   .arrownext1 {
     right: 3% !important;
     height: 1px !important;
@@ -1893,9 +1907,7 @@ iframe {
     margin-bottom: 2rem;
     
   }
-  .bgTopper {
-    height: 40vh;
-  }
+  
   .sec-2 {
     height: fit-content;
   }
@@ -1918,30 +1930,29 @@ iframe {
   .stats {
     margin-top: 3rem;
   }
-  .mySwiper2 .swiper-slide {
+  /* .mySwiper2 .swiper-slide {
     width: 21.5rem !important;
     height: 12rem !important;
   }
   .mySwiper1.swiper-slide {
-    /* width: 30.82rem !important; */
+    
     height: 10rem !important;
-  }
-  .mySwiper1 {
+  } */
+  /* .mySwiper1 {
     width: 74% !important;
     height: 24vh !important;
     
   }
   .mySwiper2 {
-    /* width: 74% !important; */
+    
     height: 38vh !important;
-  }
-  .video {
-    height: 16vh;
-    width: 65vw;
-  }
-  .testimonials_container {
-    width: 100%;
-    height: 40vh !important;
+  } */
+  
+  
+  .div-2-title {
+    
+    margin-top: 0rem;
+    /* border: 1px solid #1E2886; */
 }
 
 
@@ -1950,22 +1961,19 @@ iframe {
 
 
 @media (max-width:400px) {
-  .mySwiper2 {
+  /* .mySwiper2 {
     height: 40vh !important;
   }
   .mySwiper2 .swiper-slide {
     width: 18.5rem !important;
     height: 10rem !important;
-  }
-.testimonials_container {
-  width: 100%;
-  height: 44vh !important;
-  }
-  .bgTopper {
+  } */
+
+  /* .bgTopper {
     height: 46vh;
-  } 
+  }  */
   .home {
-    /* min-height: 550px; */
+    
     height: fit-content;
     margin-bottom: 2rem;
   }
@@ -1989,13 +1997,13 @@ iframe {
     
     font-size: 1.2rem;
   }
-  .mySwiper2 {
+  /* .mySwiper2 {
   width: 84% !important;
-  }
-  .mySwiper1 {
+  } */
+  /* .mySwiper1 {
     width: 83% !important;
     
-}
+} */
 
 
 }
