--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -87,7 +87,7 @@
       </section>
     <section class="app">
       <div class="apppage">
-        <img src="images/aboutus/Messaging.png" class="Messaging">
+        <img src="images/aboutus/phonebg.png" class="Messaging">
         <h2>Get Our Learning<br/>App</h2>
         <img src="images/aboutus/Vector2.png" class="vector3">
         <img src="images/aboutus/Vector1.png" class="Vector2">
