--- a/views/home.ejs
+++ b/views/home.ejs
@@ -357,21 +357,21 @@
 						<h3>NIT & IIST Admissions</h3>
 					</div>
 				</div> -->
-				<div class="statBox">
+				<div class="statBox" id="counter">
 					<div class="Stat">
-						<h1 class="counter MBBS_Seats" data-target=345>0.</h1>
+						<h1 class="counter MBBS_Seats counter-value" data-count=345>0.</h1>
 						<h3>MBBS <br> Seats <br> through <br> Neet</h3>
 					</div>
 					<div  class="Stat">
-						<h1 class="counter Consecutive" data-target=4>0.</h1>
+						<h1 class="counter Consecutive counter-value" data-count=4>0.</h1>
 						<h3>Consecutive years <br> of District first in <br>Salem</h3>
 					</div>
 					<div  class="Stat">
-						<h1 class="counter successRate" data-target=90>0.</h1>
+						<h1 class="counter successRate counter-value" data-count=90>0.</h1>
 						<h3>Success <br> rate in <br> NEET</h3>
 					</div>
 					<div  class="Stat">
-						<h1 class="counter" data-target=15>0.</h1>
+						<h1 class="counter counter-value" data-count=15>0.</h1>
 						<h3>NIT & IIST <br> Admission</h3>
 					</div>
 
