--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -154,7 +154,7 @@
         <img src="../images/courses/heximg1.png" alt="" />
         <div class="hexBox">
           <h1 class="hexTitle">REPEATERS</h1>
-          <p class="hexContent">
+          <p class="hexContent para1">
             This course is meant for those who have completed their 12th class
             board exams and might have already attempted the NEET. They will
             appear for NEET in the coming year after one year of training
@@ -209,6 +209,7 @@
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="../javascripts/courses.js"></script>
   </body>
 </html>
