--- a/public/stylesheets/successStories2.css
+++ b/public/stylesheets/successStories2.css
@@ -10,6 +10,7 @@
 } */
 .vector {
     width: 100%;
+
     /* height: 100%; */
 }
 
@@ -58,4 +59,21 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
+}
+@media(max-width: 400px){
+    .cardMain {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-items: center;
+        
+        grid-row-gap: 8rem;
+        width: 80%;
+        /* height: 120vh; */
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 8rem;
+    }
+    .vector{
+        margin-bottom: 15%;
+    }
 }
