--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -154,7 +154,7 @@
         <img src="../images/courses/heximg1.png" alt="" />
         <div class="hexBox">
           <h1 class="hexTitle">REPEATERS</h1>
-          <p class="hexContent para1">
+          <p class="hexContent para1neet">
             This course is meant for those who have completed their 12th class
             board exams and might have already attempted the NEET. They will
             appear for NEET in the coming year after one year of training
@@ -169,7 +169,7 @@
         <img src="../images/courses/heximg11.png" alt="" />
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Two-year course</h1>
-          <p class="hexContent">
+          <p class="hexContent para2neet">
             This course is meant for students who have completed their 10th std
             board exams. The course will start at their 11th std and will be
             conducted till their NEET exam. Course Methodology
@@ -183,7 +183,7 @@
         <img src="../images/courses/heximg2.png" alt="" />
         <div class="hexBox">
           <h1 class="hexTitle">One-year course</h1>
-          <p class="hexContent">
+          <p class="hexContent para3neet">
             The course is specifically designed for those who wish to focus on
             NEET after completing their 11th class exams.
           </p>
@@ -196,7 +196,7 @@
         <img src="../images/courses/heximg3.png" alt="" />
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Crash course</h1>
-          <p class="hexContent">
+          <p class="hexContent para4neet">
             This course is meant for those who are appearing for their 12th
             class board exams and wish to focus on NEET after the Board exams.
             These students will be attempting NEET the same year.
