--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -11,11 +11,11 @@
 <body>
     <%- include('./layout/header') %>
     <section class="Getyourvideos">
-        <div class="video">
+        <!-- <div class="video">
             <p>Get your demo videos here</p>
         </div>
         <span class="stream1">
-          <!-- <label class="mr-sm-2" for="inlineFormCustomSelect">Preference</label> -->
+          <label class="mr-sm-2" for="inlineFormCustomSelect">Preference</label>
           <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
             <option selected class="selectOption">Stream</option>
             <option value="1">One</option>
@@ -37,7 +37,7 @@
       </span>
       <span class="stream4">
         <button>Reset</button>
-      </span>
+      </span> -->
     </section>
     <section class="gridcontainer">
       <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
