--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -416,6 +416,7 @@
    background-color: white;
    width: 50%;
    padding: 3rem;
+   
    border-radius: 20px;
    position: relative;
 
@@ -654,6 +655,16 @@
 }
 
 @media (max-width:950px) {
+    .methodology1 , .methodology2, .methodology3{
+        background-color: white;
+        width: 70%;
+        padding: 3rem;
+        
+        border-radius: 20px;
+        position: relative;
+     
+     
+     }
     .hexTitle {
         font-size: 1.1rem;
     }
