--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -10,8 +10,9 @@
 
 .section2 {
   position: relative;
-  height: 140vh;
+ 
   width: 100%;
+  margin-bottom: 5rem;
 
   /* background:blue; */
 }
@@ -21,15 +22,14 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-areas:
-    "cont1 cont2 cont3"
-    "cont4 cont5 cont6 "
-    "cont7 cont8 cont9"
-    "cont10 cont11 cont12";
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
+    grid-row-gap: 5rem;
+    align-items: center;
   /* -ms-grid-row-align: center;
       -ms-grid-column-align: center; */
-  align-items: center;
-  justify-content: space-around;
+  /* align-items: center; */
+  /* justify-content: space-around; */
 }
 
 .gridbox {
@@ -37,6 +37,7 @@
   height: 12rem;
   width: 24rem;
   /* border: 1px solid black; */
+  
   display: flex;
   align-items: center;
   box-shadow: 2px 2px 50px rgb(0,0,0,0.2);
@@ -44,61 +45,61 @@
   /* -webkit-box-reflect: below 0 linear-gradient(transparent, white); */
 }
 .griditem1 {
-  grid-area: cont1;
+  
   /* background: #000; */
 }
 .griditem2 {
-  grid-area: cont2;
+  
   /* background: white; */
   flex-direction: row-reverse;
 }
 .griditem3 {
-  grid-area: cont3;
+  
   /* background: #000; */
   
 }
 .griditem4 {
-  grid-area: cont4;
+  
   /* background: white; */
   flex-direction: row-reverse;
 }
 .griditem5 {
-  grid-area: cont5;
+  
   /* background: #000; */
   
 }
 .griditem6 {
-  grid-area: cont6;
+  
   /* background: white; */
   flex-direction: row-reverse;
 }
 .griditem7 {
-  grid-area: cont7;
+  
   /* background: #000; */
   
 }
 .griditem8 {
-  grid-area: cont8;
+  
   /* background: white; */
   flex-direction: row-reverse;
 }
 .griditem9 {
-  grid-area: cont9;
+  
   /* background: white; */
  
 }
 .griditem10 {
-  grid-area: cont10;
+  
   /* background: #000; */
   flex-direction: row-reverse;
 }
 .griditem11 {
-  grid-area: cont11;
+
   /* background: white; */
   
 }
 .griditem12 {
-  grid-area: cont12;
+  
   /* background: #000; */
   flex-direction: row-reverse;
 }
@@ -126,4 +127,28 @@
 
 .gridbox > span > h3 {
   font-size: 19px;
+}
+
+@media (max-width:1250px) {
+  .gridcontainer {
+      grid-template-columns: repeat(2,1fr);
+  }   
+}
+
+@media (max-width:800px) {
+  
+.swiper-slide img {
+  object-fit: cover;
+  background-position: center;
+}
+  .gridcontainer {
+      grid-template-columns: repeat(1,1fr);
+  }   
+}
+
+@media (max-width:450px) {
+  .gridbox {
+    height: 10rem;
+    width: 20rem;
+  }   
 }
