--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -21,9 +21,9 @@
         </button>
         <div class="collapse" id="courses-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded ahover">Courses-NEET</a></li>
-            <li><a href="#" class="link-dark rounded ahover">Courses-JEE</a></li>
-            <li><a href="#" class="link-dark rounded ahover">Courses-IIT&Medical</a></li>
+            <li><a href="/admin/courses/neet" class="link-dark rounded ahover">Courses-NEET</a></li>
+            <li><a href="/admin/courses/jee" class="link-dark rounded ahover">Courses-JEE</a></li>
+            <li><a href="/admin/courses/iit&medical" class="link-dark rounded ahover">Courses-IIT&Medical</a></li>
           </ul>
         </div>
       </li>
