--- a/views/admin/courses/courseNEET.ejs
+++ b/views/admin/courses/courseNEET.ejs
@@ -5,8 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
+    <link rel="stylesheet" href="../../stylesheets/sliderRevolution.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="previewdiv">
+      <div class="interior">
+        <form
+          action="/admin/courses/neet"
+          method="post"
+          class="d-flex justify-content-center align-items-center flex-column"
+          style="width: 100%"
+        >
+          <!-- <textarea
+            name="<%#  %>"
+            id="displaytextcont"
+            cols="40"
+            rows="20"
+            aria-valuetext="helloooooo"
+          > -->
+          <div class="form-floating">
+            <textarea class="form-control" name="<%#  %>"  placeholder="Leave a comment here" id="floatingTextarea2 displaytextcont" style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Comments</label>
+          </div>
+          <%=  %> 
+          </textarea>
+        </form>
+      </div>
+    </div>
+    <%- include('../../layout/adminheader') %>
+    <section class="mainsection">
+      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="right">
+        <form
+          action="/admin/sliderrevolution"
+          method="post"
+          class="imgform"
+          enctype="multipart/form-data"
+        >
+          <h1 class="m-5">Slider Revolution</h1>
+          <table class="table" style="width: 70%">
+            <thead>
+              <tr>
+                <th scope="col">overview</th>
+                <th scope="col">methodology</th>
+                <th scope="col">Updates</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% content.forEach(i => { %>
+              <tr>
+                <td>
+                  <input
+                    type="text"
+                    id="overview"
+                    value="<%= i.overview %>"
+                    readonly
+                    style="width: 80%; border: none"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    id="methodology"
+                    value="<%= i.methodology %>"
+                    readonly
+                    style="width: 80%; border: none"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="checkbox"
+                    id="checkbox"
+                    class="updatesCheckbox"
+                    name="checkbox"
+                    value="<%= i %>"
+                    style="height: 20px; width: 20px"
+                  />
+                </td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
+          <button type="submit" class="btn btn-outline-primary submit" disabled>
+            Update
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <script src="../../javascripts/admin/courses/courseNEET.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin panel</title>
     <!-- <link rel="stylesheet" href="alert/dist/sweetalert.css"> -->
-    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,7 +136,7 @@
             action="/admin/latestupdates"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%;"
+            style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Add News</span>
@@ -41,8 +151,15 @@
               />
             </div>
             <div>
-            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
-            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                submit
+              </button>
             </div>
           </form>
         </div>
@@ -56,7 +173,8 @@
           <table class="table" style="width: 70%">
             <thead>
               <tr>
-                <th scope="col">Current Link</th>
+                <th scope="col">overview</th>
+                <th scope="col">methodology</th>
                 <th scope="col">Updates</th>
               </tr>
             </thead>
@@ -66,22 +184,29 @@
                 <td>
                   <input
                     type="text"
-                    id="linkinput"
-                    value="<%= i %>"
+                    id="overview"
+                    value="<%= i.overview %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    id="methodology"
+                    value="<%= i.methodology %>"
+                    readonly
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
                   <input
                     type="checkbox"
                     id="checkbox"
-                    class="updatesCheckbox "
+                    class="updatesCheckbox"
                     name="checkbox"
-                    value="<%= i %>"
-                    style="height: 20px; width: 20px; "
-                    
+                    value="<%= i.overview %>"
+                    style="height: 20px; width: 20px"
                   />
                 </td>
               </tr>
@@ -89,8 +214,8 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4" >
-              Add
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
+              Update
             </button>
             <button
               type="button"
