--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -65,10 +65,8 @@
         </button>
         <div class="collapse" id="results-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded ahover">Image</a></li>
-            <li><a href="#" class="link-dark rounded ahover">Name</a></li>
-            <li><a href="#" class="link-dark rounded ahover">Neet Scores</a></li>
-            <li><a href="#" class="link-dark rounded ahover">College Group</a></li>
+            <li><a href="/admin/results/images" class="link-dark rounded ahover">Images</a></li>
+            <li><a href="/admin/courses/neet" class="link-dark rounded ahover">Studdent Details</a></li>
           </ul>
         </div>
       </li>
